--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="C:\Projects\mytimes\css\style.css">
   </head>
   <body>
-    
+    <main>
+      <section class="container">
+        <h1 class="header"></h1>
+      </section>
+    </main>
   </body>
 </html>
