--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
   <body>
     <main>
       <section class="container">
-        <h1 class="header"></h1>
+        <h1 class="header">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="My Times Logo comprised of the word My and the letter T">My Times
+        </h1>
+        <nav id="header-nav">
+          <ul>
+            <li><a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"></a>World</li>
+            <li>U.S.</li>
+            <li>Tech</li>
+            <li>Science</li>
+          </ul>
+        </nav>
       </section>
     </main>
   </body>
