added orca section with content

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
         <h2>FBI Finds Action Star Guilty of False Advertising</h2>
         <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
       </section>
+      <section class="bites">
+        <h3>NEWS BITES</h3>
+        <ul>
+          <li>Cat Emoji Goes Viral</li>
+          <li>Buy YouTube Views</li>
+          <li>Home Business Advertising Ideas</li>
+          <li>Advertising Internet Online</li>
+          <li>Illustration in Marketing Materials</li>
+          <li>Finally a Top Secret Way You Can</li>
+        </ul>
+      </section>
+      <section class="orca">
+        <h2>Orca Spends Vacation at Land Wolrd Puget</h2>
+        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+      </section>
     </main>
   </body>
 </html>
