--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <h2>Orca Spends Vacation at Land Wolrd Puget</h2>
         <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
       </section>
+      <section class="burger">
+        <h2>Burger for Breakfast: How Early is too Early?</h2>
+        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+      </section>
     </main>
   </body>
 </html>
