--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         <h2>Burger for Breakfast: How Early is too Early?</h2>
         <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
       </section>
+      <section class="cats">
+        <h2>Cats in Control-Is It a Thing?</h2>
+        <p>BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>        
+      </section>
     </main>
   </body>
 </html>
