added cameras section and content

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       <section class="earth">
         <h2>Earth Spins Backwards for 2017</h2>
       </section>
+      <section class="cameras">
+        <h2>Research Shows Cameras Erase Memory</h2>
+      </section>
     </main>
   </body>
 </html>
