added footer section with content

--- a/index.html
+++ b/index.html
@@ -57,5 +57,22 @@
         <h2>Research Shows Cameras Erase Memory</h2>
       </section>
     </main>
+    <footer>
+      <section class="mytimes">
+        <p>My Times</p>
+        <p>|</p>
+      </section>
+      <nav class="footer-nav">
+        <ul>
+          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>World</li></a>
+          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>U.S.</li></a>
+          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>Tech</li></a>
+          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>Science</li></a>
+        </ul>
+      </nav>
+      <section class=copyright>
+        <p>&copy 2016, My Times (A Division of Codeacademy bite)</p>
+      </section>
+    </footer>
   </body>
 </html>
