added brackets for copyright class on footer section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>Science</li></a>
         </ul>
       </nav>
-      <section class=copyright>
+      <section class="copyright">
         <p>&copy 2016, My Times (A Division of Codeacademy bite)</p>
       </section>
     </footer>
