added news section for body oof news and nested article sections inside

--- a/index.html
+++ b/index.html
@@ -1,34 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Times</title>
-    <link rel="stylesheet" href="C:\Projects\mytimes\css\style.css">
-  </head>
-  <body>
-    <main>
-      <section class="container">
-        <h1 class="header">
+
+<head>
+  <title>My Times</title>
+  <link rel="stylesheet" href="C:\Projects\mytimes\css\style.css">
+</head>
+
+<body>
+  <main>
+    <section class="container">
+      <h1 class="header">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="My Times Logo comprised of the word My and the letter T"><span id: "header-text">My Times</span>
         </h1>
-        <nav id="header-nav">
-          <ul>
-            <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>World</li></a>
-            <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>U.S.</li></a>
-            <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>Tech</li></a>
-            <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>Science</li></a>
-          </ul>
-        </nav>
-      </section>
+      <nav id="header-nav">
+        <ul>
+          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+            <li>World</li>
+          </a>
+          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+            <li>U.S.</li>
+          </a>
+          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+            <li>Tech</li>
+          </a>
+          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+            <li>Science</li>
+          </a>
+        </ul>
+      </nav>
+    </section>
+    <section class="news">
       <section class="mother">
         <h1 id="mother-header">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
-        <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+        <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum
+        metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis.
+        Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc
+        volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus
+        metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis
+        elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis
+        tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
+        sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit.
+        Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
       </section>
       <section class="fbi">
         <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-        <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+        <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam
+        vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt
+        sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar
+        eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci
+        mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras
+        condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor
+        at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
       </section>
       <section class="bites">
-        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="Image of a Cholocate Chip Cooking where someone took a bite">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png"
+        alt="Image of a Cholocate Chip Cooking where someone took a bite">
         <h3>NEWS BITES</h3>
         <ul>
           <li>Cat Emoji Goes Viral</li>
@@ -41,15 +68,23 @@
       </section>
       <section class="orca">
         <h2>Orca Spends Vacation at Land Wolrd Puget</h2>
-        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...</p>
+        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
+        Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante
+        accumsan...</p>
       </section>
       <section class="burger">
         <h2>Burger for Breakfast: How Early is too Early?</h2>
-        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.</p>
+        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
+        Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu
+        nisl erat.</p>
       </section>
       <section class="cats">
         <h2 id="cats-header">Cats in Control-Is It a Thing?</h2>
-        <p id="cats-content">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia dolor, quis commodo tellus pellentesque in.</p>
+        <p id="cats-content">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta
+        aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel
+        neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est
+        sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia
+        dolor, quis commodo tellus pellentesque in.</p>
       </section>
       <section class="earth">
         <h2>Earth Spins Backwards for 2017</h2>
@@ -57,23 +92,33 @@
       <section class="cameras">
         <h2>Research Shows Cameras Erase Memory</h2>
       </section>
-    </main>
-    <footer>
-      <section class="mytimes">
-        <p>My Times</p>
-        <p>|</p>
-      </section>
-      <nav class="footer-nav">
-        <ul>
-          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>World</li></a>
-          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>U.S.</li></a>
-          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>Tech</li></a>
-          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#"><li>Science</li></a>
-        </ul>
-      </nav>
-      <section class="copyright">
-        <p>&copy 2016, My Times (A Division of Codeacademy bite)</p>
-      </section>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer>
+    <section class="mytimes">
+      <p>My Times</p>
+      <p>|</p>
+    </section>
+    <nav class="footer-nav">
+      <ul>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+          <li>World</li>
+        </a>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+          <li>U.S.</li>
+        </a>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+          <li>Tech</li>
+        </a>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
+          <li>Science</li>
+        </a>
+      </ul>
+    </nav>
+    <section class="copyright">
+      <p>&copy 2016, My Times (A Division of Codeacademy bite)</p>
+    </section>
+  </footer>
+</body>
+
 </html>
