gave up and changed entire code without using git commit each time

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
   <main>
+    <!--Header section-->
     <section class="container">
       <h1 class="header">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="My Times Logo comprised of the word My and the letter T"><span id: "header-text">My Times</span>
@@ -29,68 +30,91 @@
         </ul>
       </nav>
     </section>
+    <!--Main Content-->
     <section class="news">
-      <section class="mother">
-        <h1 id="mother-header">Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
-        <p>MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum
-        metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis.
-        Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc
-        volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus
-        metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis
-        elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis
-        tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum,
-        sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit.
-        Nulla non sagittis neque. Nullam sit amet fringilla massa.</p>
+      <!--First News Column-->
+      <section class="column-large">
+        <section class="mother">
+          <div id="mother-header">
+            <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
+          </div>
+          <p class="narrative">MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum
+            rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam
+            sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum
+            risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor,
+            sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa
+            rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit
+            imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio.
+            Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque.
+            Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque.
+            Nullam sit amet fringilla massa.</p>
+        </section>
+        <section class="stories">
+          <section class="orca">
+            <div class="text-content" <h2>Orca Spends Vacation at Land Wolrd Puget</h2>
+              <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
+                purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
+                pulvinar ante accumsan...
+              </p>
+            </div>
+          </section>
+          <section class="earth">
+            <span>Earth Spins Backwards for 2017</span>
+          </section>
+          <section class="burger">
+            <h2>Burger for Breakfast: How Early is too Early?</h2>
+            <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
+              Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent
+              eu nisl erat.</p>
+          </section>
+          <section class="cameras">
+            <span>Research Shows Cameras Erase Memory</span>
+          </section>
+        </section>
       </section>
-      <section class="fbi">
-        <h2>FBI Finds Action Star Guilty of False Advertising</h2>
-        <p>WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed. Nam
-        vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros tincidunt
-        sed. Morbi venenatis condimentum sem, vitae sollicitudin turpis pulvinar
-        eget. Morbi pellentesque consectetur mi id auctor. Phasellus tincidunt orci
-        mauris, placerat pharetra urna fringilla vitae. Morbi eget rutrum urna. Cras
-        condimentum augue ut ante sollicitudin interdum. Pellentesque cursus dolor
-        at tincidunt cursus. Vestibulum blandit aliquam felis...</p>
+      <!--Second News Column-->
+      <section class="column-medium">
+        <section class="story">
+          <div class="text-content">
+            <h2>FBI Finds Action Star Guilty of False Advertising</h2>
+            <p class="narrative">WASHINGTON DC- Donec luctus sem augue, rutrum posuere orci aliquam sed.
+              Nam vitae aliquam lectus. Sed tempor tortor est, nec sagittis eros
+              tincidunt sed. Morbi venenatis condimentum sem, vitae sollicitudin
+              turpis pulvinar eget. Morbi pellentesque consectetur mi id auctor.
+              Phasellus tincidunt orci mauris, placerat pharetra urna fringilla vitae.
+              Morbi eget rutrum urna. Cras condimentum augue ut ante sollicitudin
+              interdum. Pellentesque cursus dolor at tincidunt cursus. Vestibulum
+              blandit aliquam felis...</p>
+          </div>
+        </section>
+        <section class="story">
+          <div class="cats">
+            <span>Cats in Control-Is It a Thing?</span>
+          </div>
+          <p class "narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum
+            porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque
+            mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis,
+            dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim
+            lacinia dolor, quis commodo tellus pellentesque in.</p>
+        </section>
       </section>
-      <section class="bites">
-        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png"
-        alt="Image of a Cholocate Chip Cooking where someone took a bite">
-        <h3>NEWS BITES</h3>
-        <ul>
-          <li>Cat Emoji Goes Viral</li>
-          <li>Buy YouTube Views</li>
-          <li>Home Business Advertising Ideas</li>
-          <li>Advertising Internet Online</li>
-          <li>Illustration in Marketing Materials</li>
-          <li>Finally a Top Secret Way You Can</li>
-        </ul>
-      </section>
-      <section class="orca">
-        <h2>Orca Spends Vacation at Land Wolrd Puget</h2>
-        <p>PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus.
-        Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante
-        accumsan...</p>
-      </section>
-      <section class="burger">
-        <h2>Burger for Breakfast: How Early is too Early?</h2>
-        <p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
-        Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu
-        nisl erat.</p>
-      </section>
-      <section class="cats">
-        <h2 id="cats-header">Cats in Control-Is It a Thing?</h2>
-        <p id="cats-content">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum porta
-        aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque mi vel
-        neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis, dui est
-        sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim lacinia
-        dolor, quis commodo tellus pellentesque in.</p>
-      </section>
-      <section class="earth">
-        <h2>Earth Spins Backwards for 2017</h2>
-      </section>
-      <section class="cameras">
-        <h2>Research Shows Cameras Erase Memory</h2>
+      <!--Third News Column-->
+      <section class="column-small">
+
+        <img class="cookie" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png"
+          alt="Image of a Cholocate Chip Cooking where someone took a bite">
+        <div class="bites">
+          <h3>NEWS BITES</h3>
+          <ul class="bites">
+            <li>Cat Emoji Goes Viral</li>
+            <li>Buy YouTube Views</li>
+            <li>Home Business Advertising Ideas</li>
+            <li>Advertising Internet Online</li>
+            <li>Illustration in Marketing Materials</li>
+            <li>Finally a Top Secret Way You Can</li>
+          </ul>
+        </div>
       </section>
     </section>
   </main>
