--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Header section-->
     <section class="container">
       <h1 class="header">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="My Times Logo comprised of the word My and the letter T"><span id: "header-text">My Times</span>
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="My Times Logo comprised of the word My and the letter T"><span id= "header-text">My Times</span>
         </h1>
       <nav id="header-nav">
         <ul>
@@ -64,7 +64,7 @@
           </section>
           <section class="burger">
             <h2>Burger for Breakfast: How Early is too Early?</h2>
-            <p class="narrative">Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus.
+            <p class="narrative">Mew York, MY - Interdum et malesuada fames ac ante ipsum primis in faucibus.
               Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent
               eu nisl erat.</p>
           </section>
@@ -92,7 +92,7 @@
           <div class="cats">
             <span>Cats in Control-Is It a Thing?</span>
           </div>
-          <p class "narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum
+          <p class="narrative">BROOKLYN, NY- In molestie nulla sodales sit amet. Proin vulputate, ipsum
             porta aliquam commodo, nunc nibh tincidunt lorem, vel consectetur neque
             mi vel neque. Mauris ultricies, nulla scelerisque sollicitudin lobortis,
             dui est sodales sapien, a vestibulum velit diam eget felis. Vivamus dignissim
@@ -104,16 +104,14 @@
 
         <img class="cookie" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png"
           alt="Image of a Cholocate Chip Cooking where someone took a bite">
-        <div class="bites">
+        <div class="news-bites">
           <h3>NEWS BITES</h3>
-          <ul class="bites">
-            <li>Cat Emoji Goes Viral</li>
-            <li>Buy YouTube Views</li>
-            <li>Home Business Advertising Ideas</li>
-            <li>Advertising Internet Online</li>
-            <li>Illustration in Marketing Materials</li>
-            <li>Finally a Top Secret Way You Can</li>
-          </ul>
+          <span class="bites">Cat Emoji Goes Viral</span>
+          <span class="bites">Buy YouTube Views</span>
+          <span class="bites">Home Business Advertising Ideas</span>
+          <span class="bites">Advertising Internet Online</span>
+          <span class="bites">Illustration in Marketing Materials</li>
+          <span class="bites">Finally a Top Secret Way You Can</span>
         </div>
       </section>
     </section>
