--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
 </head>
 
 <body>
+  <!--Header section-->
+  <header>
+    <div class="logo">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"
+      alt="My Times Logo comprised of the word My and the letter T">
+      <span id="header-text">My Times</span>
+    </div>
+    <nav>
+      <span>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">World</a>
+        </span>
+      <span>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">U.S.</a>
+      </span>
+      <span>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">Tech</a>
+      </span>
+      <span>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">Science</a>
+      </span>
+    </nav>
+  </header>
   <main>
-    <!--Header section-->
-    <section class="container">
-      <h1 class="header">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg" alt="My Times Logo comprised of the word My and the letter T"><span id= "header-text">My Times</span>
-        </h1>
-      <nav id="header-nav">
-        <ul>
-          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
-            <li>World</li>
-          </a>
-          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
-            <li>U.S.</li>
-          </a>
-          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
-            <li>Tech</li>
-          </a>
-          <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
-            <li>Science</li>
-          </a>
-        </ul>
-      </nav>
-    </section>
     <!--Main Content-->
     <section class="news">
       <!--First News Column-->
-      <section class="column-large">
+      <section class="column large">
         <section class="mother">
           <div id="mother-header">
             <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
@@ -51,30 +51,33 @@
             Nullam sit amet fringilla massa.</p>
         </section>
         <section class="stories">
+          <!-- Orca -->
           <section class="orca">
-            <div class="text-content" <h2>Orca Spends Vacation at Land Wolrd Puget</h2>
+            <div class="text-content">
+              <h2>Orca Spends Vacation at Land Wolrd Puget</h2>
               <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
                 purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi
                 pulvinar ante accumsan...
               </p>
             </div>
+            <section class="earth">
+              <span>Earth Spins Backwards for 2017</span>
+            </section>
           </section>
-          <section class="earth">
-            <span>Earth Spins Backwards for 2017</span>
-          </section>
+          <!--Burger  -->
           <section class="burger">
             <h2>Burger for Breakfast: How Early is too Early?</h2>
             <p class="narrative">Mew York, MY - Interdum et malesuada fames ac ante ipsum primis in faucibus.
               Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent
               eu nisl erat.</p>
-          </section>
-          <section class="cameras">
-            <span>Research Shows Cameras Erase Memory</span>
+              <section class="cameras">
+                <span>Research Shows Cameras Erase Memory</span>
+              </section>
           </section>
         </section>
       </section>
       <!--Second News Column-->
-      <section class="column-medium">
+      <section class="column medium">
         <section class="story">
           <div class="text-content">
             <h2>FBI Finds Action Star Guilty of False Advertising</h2>
@@ -100,8 +103,7 @@
         </section>
       </section>
       <!--Third News Column-->
-      <section class="column-small">
-
+      <section class="column small">
         <img class="cookie" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png"
           alt="Image of a Cholocate Chip Cooking where someone took a bite">
         <div class="news-bites">
@@ -117,25 +119,20 @@
     </section>
   </main>
   <footer>
-    <section class="mytimes">
-      <p>My Times</p>
-      <p>|</p>
-    </section>
+      <span class="title">My Times</span>
     <nav class="footer-nav">
-      <ul>
-        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
-          <li>World</li>
-        </a>
-        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
-          <li>U.S.</li>
-        </a>
-        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
-          <li>Tech</li>
-        </a>
-        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">
-          <li>Science</li>
-        </a>
-      </ul>
+      <span>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">World</a>
+        </span>
+      <span>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">U.S.</a>
+      </span>
+      <span>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">Tech</a>
+      </span>
+      <span>
+        <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">Science</a>
+      </span>
     </nav>
     <section class="copyright">
       <p>&copy 2016, My Times (A Division of Codeacademy bite)</p>
