--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="logo">
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myt-logo.jpg"
-      alt="My Times Logo comprised of the word My and the letter T">
+        alt="My Times Logo comprised of the word My and the letter T">
       <span id="header-text">My Times</span>
     </div>
     <nav>
@@ -51,8 +51,8 @@
             Nullam sit amet fringilla massa.</p>
         </section>
         <section class="stories">
-          <!-- Orca -->
-          <section class="orca">
+          <!-- Orca chage class name to story-->
+          <section class="story">
             <div class="text-content">
               <h2>Orca Spends Vacation at Land Wolrd Puget</h2>
               <p class="narrative">PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices
@@ -64,15 +64,17 @@
               <span>Earth Spins Backwards for 2017</span>
             </section>
           </section>
-          <!--Burger  -->
-          <section class="burger">
+          <!--Burger  change class name to story-->
+          <section class="story">
+            <div class="text-content">
             <h2>Burger for Breakfast: How Early is too Early?</h2>
             <p class="narrative">Mew York, MY - Interdum et malesuada fames ac ante ipsum primis in faucibus.
               Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent
               eu nisl erat.</p>
-              <section class="cameras">
-                <span>Research Shows Cameras Erase Memory</span>
-              </section>
+            </div>
+            <section class="cameras">
+              <span>Research Shows Cameras Erase Memory</span>
+            </section>
           </section>
         </section>
       </section>
@@ -112,28 +114,30 @@
           <span class="bites">Buy YouTube Views</span>
           <span class="bites">Home Business Advertising Ideas</span>
           <span class="bites">Advertising Internet Online</span>
-          <span class="bites">Illustration in Marketing Materials</li>
+          <span class="bites">Illustration in Marketing Materials</span>
           <span class="bites">Finally a Top Secret Way You Can</span>
         </div>
       </section>
     </section>
   </main>
   <footer>
-      <span class="title">My Times</span>
-    <nav class="footer-nav">
-      <span>
+    <div class="info">
+      <span class="title">MY Times</span>
+      <nav class="footer-nav">
+        <span>
         <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">World</a>
         </span>
-      <span>
+        <span>
         <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">U.S.</a>
       </span>
-      <span>
+        <span>
         <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">Tech</a>
       </span>
-      <span>
+        <span>
         <a href="https://external-production.codecademy.com/assets/secure/index-e15cd898fa5906b22c02b7fc4cf8e509.html#">Science</a>
       </span>
-    </nav>
+      </nav>
+    </div>
     <section class="copyright">
       <p>&copy 2016, My Times (A Division of Codeacademy bite)</p>
     </section>
